# Core_System

./: README.md
src/core_system/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/core_system/core_system/: amr_client.py  core_system_node.py
src/core_system/srv/: ManipulatorTask.srv  StationConfirmation.srv  StationRequest.srv  StationResponse.srv
